# FunWithKokkos

./: .gitignore  setupKokkos.sh
BuildTest/: CMakeLists.txt  cpu-build.sh  gpu-build.sh  main.cpp
BuildTest/build-gpu/: CMakeCache.txt  Makefile  cmake_install.cmake  cool
calcPI/: CMakeLists.txt
calcPI/src/: calcPI.cpp
copyTest/: CMakeLists.txt
copyTest/src/: copyTest.cpp
hier/cajete_test/: CMakeLists.txt
hier/cajete_test/cpu-build/: CMakeCache.txt  Makefile  cajete_test  cmake_install.cmake
hier/cajete_test/gpu-build/: CMakeCache.txt  Makefile  cajete_test  cmake_install.cmake
hier/cajete_test/src/: cajete_test.cpp
hier/functor_teams/: CMakeLists.txt  cpu-compile.sh
hier/functor_teams/cpu-build/: CMakeCache.txt  Makefile  cmake_install.cmake  functor_teams
hier/functor_teams/gpu-build/: CMakeCache.txt  Makefile  cmake_install.cmake  functor_teams
hier/functor_teams/src/: functor_teams.cpp
hier/my_teams/: CMakeLists.txt
hier/my_teams/cpu-build/: CMakeCache.txt  Makefile  cmake_install.cmake  my_teams
hier/my_teams/gpu-build/: CMakeCache.txt  Makefile  cmake_install.cmake  my_teams
hier/thread_functions/: CMakeLists.txt
hier/thread_range/: gpu-compile.sh
hier/thread_teams/: CMakeLists.txt
scratch/: calcPI.cpp  calcPI_Extra_Example_Funct.cpp
structInline/: CMakeLists.txt
structInline/src/: structInline.cpp
structTest/: CMakeLists.txt
structTest/src/: structTest.cpp
templateKokkos/: CMakeLists.txt  cpu-compile.sh  gpu-compile.sh
templateKokkos/src/: template.cpp
templateTest/: template  template.cpp
(+23 files in other folders)
